--- a/games.html
+++ b/games.html
@@ -23,10 +23,12 @@
             <div class="card">
                 <h2>Game 1</h2>
                 <p>Description of Game 1.</p>
+                <button onclick="window.location.href='https://example.com/game1'">Play Game 1</button>
             </div>
             <div class="card">
                 <h2>Game 2</h2>
                 <p>Description of Game 2.</p>
+                <button onclick="window.location.href='https://example.com/game2'">Play Game 2</button>
             </div>
             <!-- Add more game cards as needed -->
         </div>
